=== 0.4 ===
2011-04-25  Aki Sasaki  <aki@mozilla.com>

* mozharness/base/log.py (BaseLogger.log_message): Renamed from log() to be compatible with LogMixin.

* mozharness/base/log.py (LogMixin): New class.
    Pull the generic logging methods from BaseScript to this new class.
    This is specifically to allow for non-BaseScript objects to use the log_obj from BaseScript (set a LogMixin's self.log_obj to the logging object)

* mozharness/base/script.py (BaseScript):
    Pull the generic logging methods from BaseScript to a new LogMixin class.
    Change BaseScript to inherit LogMixin by default.

* mozharness/base/config.py (BaseConfig.parse_args):
    Fixed the args list sent to parse_args (sys.argv[1:])
    Set self.options and self.args after parse_args for later access in BaseScript._pre_config_lock

* mozharness/base/config.py (ExtendedOptionParser):
    Removed self.variables hack and add_option override.

* mozharness/base/script.py (__init__):
    Added a _pre_config_lock() call before _config_lock() to allow for things like hgtool reading the buildprops json into self.config.
    Moved --simple-log and --multi-log options to mozharness.base.config._create_config_parser.

* mozharness/base/script.py (_config_lock):
    Renamed to match _pre_config_lock (was _lock_config).

* mozharness/base/config.py (_create_config_parser):
    Allow for --ACTION to do the same thing as --only-ACTION.
    Added action and logging OptionGroups.
    Moved --simple-log and --multi-log options here.
    Disable noop option argument.
    Removed dependency on config_parser.variables (config_parser.defaults.keys() gives the same info).

    The noop option disable forced a change of s,self.config['noop'],self.config.get('noop'), throughout mozharness.

* scripts/hgtool.py: New file.

* CHANGES: New file.

* TODO: New file.

* mozharness/__init__.py: Bumped version to 0.4.

2011-04-21  Aki Sasaki  <aki@mozilla.com>

* mozharness/base/script.py (MercurialMixin, MercurialScript):